[package]
name = "openssl-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"


[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.37.0", features = ["full"]}
tokio-openssl = "0.6.4"
bytes = "1.2"
http = "1"